AmicarDP/src/objects/Relacion__c.object
<CustomObject>
    <fields>
        <fullName>Apellidos__c</fullName>
        <label>Apellidos</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complementa_renta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complementa renta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comuna__c</fullName>
        <label>Comuna</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Comuna</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relaciones</relationshipLabel>
        <relationshipName>Relacionado_con</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Dirección</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empleador__c</fullName>
        <label>Empleador</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Es_aval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es aval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <label>Casado</label>
                </value>
                <value>
                    <fullName>EP</fullName>
                    <label>Conviviente civil</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>Divorciado</label>
                </value>
                <value>
                    <fullName>SH</fullName>
                    <label>Separado</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                    <label>Soltero</label>
                </value>
                <value>
                    <fullName>VI</fullName>
                    <label>Viudo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <formula>Cuenta__r.RUT__c</formula>
        <label>RUT cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT_referencia__c</fullName>
        <label>RUT</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regimen_matrimonial__c</fullName>
        <label>Régimen matrimonial</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Estado_civil__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CB</fullName>
                    <label>Comunidad de Bienes</label>
                </value>
                <value>
                    <fullName>PG</fullName>
                    <label>Participación en los gananciales</label>
                </value>
                <value>
                    <fullName>SB</fullName>
                    <label>Separación total de bienes</label>
                </value>
                <value>
                    <fullName>Sociedad conyugal</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>No aplica</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Región</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regi_n</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <label>Solicitud</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Relacionados</relationshipLabel>
        <relationshipName>Relacionados</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sueldo_liquido__c</fullName>
        <label>Sueldo liquido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_empleador__c</fullName>
        <label>Teléfono empleador</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_de_actividad__c</fullName>
        <label>Tipo de actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_actividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_persona__c</fullName>
        <label>Tipo de persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jurídica</fullName>
                </value>
                <value>
                    <fullName>Natural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_relacion__c</fullName>
        <label>Tipo de relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Padre o Madre</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Primo(a)</fullName>
                </value>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Amistad</fullName>
                    <isActive>false</isActive>
                    <label>Amistad</label>
                </value>
                <value>
                    <fullName>No sanguíneo</fullName>
                    <isActive>false</isActive>
                    <label>No sanguíneo</label>
                </value>
                <value>
                    <fullName>Parentesco</fullName>
                    <isActive>false</isActive>
                    <label>Parentesco</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_trabajador__c</fullName>
        <label>Tipo de trabajador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_trabajador</valueSetName>
        </valueSet>
    </fields>
    <label>Relación</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Relación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones</pluralLabel>
    <recordTypes>
        <fullName>Aval</fullName>
        <active>true</active>
        <label>Aval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compra_para</fullName>
        <active>true</active>
        <label>Compra para</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conyuge</fullName>
        <active>true</active>
        <label>Conyuge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Referencia</fullName>
        <active>true</active>
        <label>Referencia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Representante_Legal</fullName>
        <active>true</active>
        <label>Representante Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Socio</fullName>
        <active>true</active>
        <label>Socio</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ConyugeComplementaRenta</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	Complementa_renta__c,
	RecordType.DeveloperName = &apos;Conyuge&apos;,
	OR(
		ISBLANK(Empleador__c),
		ISBLANK(Telefono_empleador__c),
		ISBLANK(TEXT(Tipo_de_trabajador__c)),
		ISBLANK(TEXT(Tipo_de_actividad__c)),
		ISBLANK(Sueldo_liquido__c)
	)
)</errorConditionFormula>
        <errorDisplayField>Empleador__c</errorDisplayField>
        <errorMessage>Para complementar renta debe ingresar los datos de empleador.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaRutReferencia</fullName>
        <active>true</active>
        <description>RUT_referencia__c</description>
        <errorConditionFormula>IF(
	OR(
		RecordType.Name == &apos;Referencia&apos;,
		RecordType.Name == &apos;Conyuge&apos;
	),
	IF(
		11-(mod(VALUE(mid( RUT_referencia__c,1,1)) *(len(RUT_referencia__c) - 7) + (10-len(RUT_referencia__c)) * VALUE(mid(RUT_referencia__c,2,1))* 7 + (len(RUT_referencia__c) - 9) * VALUE(mid(RUT_referencia__c,2,1)) * 2 + VALUE(mid(RUT_referencia__c,3,1)) *( len(RUT_referencia__c) -3) + VALUE(mid(RUT_referencia__c,4,1)) * (len(RUT_referencia__c) -4)+VALUE(mid(RUT_referencia__c,5,1)) * (len(RUT_referencia__c) - 5) + VALUE(mid(RUT_referencia__c,6,1)) * (len(RUT_referencia__c) - 6) + VALUE(mid(RUT_referencia__c,7,1)) *( len(RUT_referencia__c) - 7) +(len(RUT_referencia__c) - 9) * VALUE(mid(RUT_referencia__c,(len(RUT_referencia__c) -2),1)) * 2,11)) 
		&lt;&gt; 
		IF(
			MID( RUT_referencia__c, FIND(&quot;-&quot;, RUT_referencia__c)+1 ,1)=&apos;0&apos;, 11, IF(or(MID( RUT_referencia__c, FIND(&quot;-&quot;, RUT_referencia__c)+1 ,1)=&apos;k&apos;,MID( RUT_referencia__c, FIND(&quot;-&quot;, RUT_referencia__c)+1 ,1)=&apos;K&apos;), 10, VALUE(MID( RUT_referencia__c, FIND(&quot;-&quot;, RUT_referencia__c)+1 ,1)))
		)
		,true,false
	),false
)</errorConditionFormula>
        <errorDisplayField>RUT_referencia__c</errorDisplayField>
        <errorMessage>RUT incorrecto, por favor verifique la información.</errorMessage>
    </validationRules>
</CustomObject>